--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,10 @@
 }@else {
 
 <router-outlet />
+<ng-toast [width]="300" [position]="ToasterPosition.TOP_RIGHT" />
 }
-
+<!-- <ng-toast /> -->
+<!-- takes default width of 350px and top-right position   -->
+<!-- <ng-toast [width]="400" /> -->
+<!-- configure width   -->
+<!-- configure width with position   -->
