--- a/src/componants/about/about.component.html
+++ b/src/componants/about/about.component.html
@@ -1,63 +1,76 @@
 <app-header></app-header>
 <!-- start #id Hero ==> main -->
-  <section id="page-header" class="about-header">
+<section id="page-header" class="about-header">
+  <h2>#Know Us</h2>
 
-    <h2>#Know Us</h2>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, vitae. </p>
-
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, vitae.
+  </p>
 </section>
 <!-- Start Section Features -->
-<section  id="about-head" class="section-p1" > 
-    <img src="img/about/a6.jpg" alt=""> 
-    <div> 
-        <h2> Who We Are ?</h2> 
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe praesentium c
-       orporis expedita dolores, quis accusantium numquam pariatur delectus vero cum.</p> 
-       <abbr title="">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe praesentium c</abbr> 
-       <br>  <br> 
-       <marquee bgcolor="#ccc" loop="-1" scrollamount="5" wid="100%">  orporis expedita dolores, quis accusantium numquam pariatur delectus vero cum</marquee>
+<section id="about-head" class="section-p1">
+  <img src="img/about/a6.jpg" alt="" />
+  <div>
+    <h2>Who We Are ?</h2>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe
+      praesentium c orporis expedita dolores, quis accusantium numquam pariatur
+      delectus vero cum.
+    </p>
+    <abbr title=""
+      >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe
+      praesentium c</abbr
+    >
+    <br />
+    <br />
+    <marquee
+      bgcolor="#ccc"
+      loop="-1"
+      scrollamount="5"
+      wid="100%"
+      style="background: #e8f6ea; color: black"
+    >
+      orporis expedita dolores, quis accusantium numquam pariatur delectus vero
+      cum</marquee
+    >
+  </div>
+</section>
 
-    </div>
-</section> 
+<!-- start video section  -->
+<section id="about-app" class="section-p1">
+  <h2>Dwonload Our <a href="#">App</a></h2>
+  <div class="video">
+    <video autoplay muted loop src="img/about/1.mp4"></video>
+  </div>
+</section>
 
-     <!-- start video section  -->
-      <section id="about-app" class="section-p1">  
-     <h2 > Dwonload Our <a href="#">App</a></h2>     
-     <div class="video"> 
-        <video autoplay muted loop src="img/about/1.mp4"></video>
-     </div>
-          
-      </section>
-
-     <!-- end video section  -->
-     <!-- start feature section --> 
-     <section id="feature" class="section-p1">
-        <div class="fe-box">
-            <img src="img/features/f1.png" alt="Features F1">
-            <h6>Free Shipping</h6>
-        </div>
-        <div class="fe-box">
-            <img src="img/features/f2.png" alt="Features F1">
-            <h6>Online Order</h6>
-        </div>
-        <div class="fe-box">
-            <img src="img/features/f3.png" alt="Features F1">
-            <h6>Save Money</h6>
-        </div>
-        <div class="fe-box">
-            <img src="img/features/f4.png" alt="Features F1">
-            <h6>Promotions</h6>
-        </div>
-        <div class="fe-box">
-            <img src="img/features/f5.png" alt="Features F1">
-            <h6>Happy Sell</h6>
-        </div>
-        <div class="fe-box">
-            <img src="img/features/f6.png" alt="Features F1">
-            <h6>F24/7 Support</h6>
-        </div>
-
-    </section>
-     <!-- end feature section -->
-      <app-fotter></app-fotter>
+<!-- end video section  -->
+<!-- start feature section -->
+<section id="feature" class="section-p1 d-flex">
+  <div class="fe-box">
+    <img src="img/features/f1.png" alt="Features F1" />
+    <h6>Free Shipping</h6>
+  </div>
+  <div class="fe-box">
+    <img src="img/features/f2.png" alt="Features F1" />
+    <h6>Online Order</h6>
+  </div>
+  <div class="fe-box">
+    <img src="img/features/f3.png" alt="Features F1" />
+    <h6>Save Money</h6>
+  </div>
+  <div class="fe-box">
+    <img src="img/features/f4.png" alt="Features F1" />
+    <h6>Promotions</h6>
+  </div>
+  <div class="fe-box">
+    <img src="img/features/f5.png" alt="Features F1" />
+    <h6>Happy Sell</h6>
+  </div>
+  <div class="fe-box">
+    <img src="img/features/f6.png" alt="Features F1" />
+    <h6>F24/7 Support</h6>
+  </div>
+</section>
+<!-- end feature section -->
+<app-fotter></app-fotter>
