--- a/src/componants/allprodact/allprodact.component.html
+++ b/src/componants/allprodact/allprodact.component.html
@@ -1,24 +1,33 @@
 <div class="pairant">
-    <div routerLink="/detils/{{myData.id}}">
-<img src="{{myData.img}}" alt="" id="MainImg" class="wow pulse" data-wow-duration="1s" data-wow-offset="250" >
-<div class="des">
-    <span>{{myData.brand}}</span>
-    <h5>{{myData.desc}}</h5>
-    <div class="star">
+  <div routerLink="/detils/{{ myData.id }}">
+    <img src="{{ myData.img }}" alt="" id="MainImg" />
+    <div class="des">
+      <span>{{ myData.brand }}</span>
+      <h5>{{ myData.desc }}</h5>
+      <h5 style="display: none">{{ myData.title }}</h5>
+
+      <div class="star">
         <i class="fas fa-star"></i>
         <i class="fas fa-star"></i>
         <i class="fas fa-star"></i>
         <i class="fas fa-star"></i>
         <i class="fas fa-star"></i>
+      </div>
+      <h4>${{ myData.price }}</h4>
     </div>
-    <h4>${{myData.price}}</h4>
-</div>
-</div>
-<button class="cart" *ngIf="!addButton" (click)="addButton = true">
+  </div>
+  <button class="cart" *ngIf="!addButton" (click)="addButton = true">
     <i class="fas fa-shopping-cart"></i>
-</button>
-<div class="d-flex w50" *ngIf="addButton">
-    <input type="number" class="form-control" [(ngModel)] ="quantity">
-    <button class="btn btn-primary" (click)="add()" (click)="alert()">add</button>
-</div>
+  </button>
+  <div class="d-flex w50" *ngIf="addButton" class="add-form">
+    <input
+      type="number"
+      class="form-control add-input"
+      [(ngModel)]="quantity"
+      min="0"
+    />
+    <button class="btn add" (click)="add()" [disabled]="quantity <= 0">
+      add
+    </button>
+  </div>
 </div>
