--- a/src/componants/blog/blog.component.html
+++ b/src/componants/blog/blog.component.html
@@ -1,83 +1,135 @@
 <app-header></app-header>
 <!-- start #id Hero ==> main -->
- <section id="page-header" class="blog-header">
+<section id="page-header" class="blog-header">
+  <h2>#readmore</h2>
 
-    <h2>#readmore</h2>
-
-    <p>Read all case studies about our products! </p>
-
+  <p>Read all case studies about our products!</p>
 </section>
 <!-- Start Section Features -->
 
 <section id="blog">
-     <div class="blog-box">
-        <div class="blog-img">
-            <img src="img/blog/b1.jpg" alt="" class="wow pulse" data-wow-duration="1s" data-wow-offset="250">
-        </div>
-        <div class="blog-details">
-            <h4 class="wow pulse" data-wow-duration="2s" data-wow-offset="250">The Cotton-Jersey Zi[-Up Hoodie</h4>
-            <p class="wow pulse" data-wow-duration="2s" data-wow-offset="250">Kickstarter man braid godard coloring book. Raclette waistcoat selfies yr
-                wolf chartreuse hexagon irony, godard ...</p>
-                <a href="#" class="wow pulse" data-wow-duration="2s" data-wow-offset="250">CONTINUE READING</a>
-        </div>
-        <h1>13/01</h1>
-     </div>
-     <div class="blog-box">
-        <div class="blog-img">
-            <img src="img/blog/b2.jpg" alt="" class="wow pulse" data-wow-duration="2s" data-wow-offset="250">
-        </div>
-        <div class="blog-details">
-            <h4 class="wow pulse" data-wow-duration="1s" data-wow-offset="250">How to Style a Quiff</h4>
-            <p class="wow pulse" data-wow-duration="2s" data-wow-offset="250">Kickstarter man braid godard coloring book. Raclette waistcoat selfies
-            yr wolf chartreuse hexagon irony, godard ...</p>
-            <a href="#" class="wow pulse" data-wow-duration="2s" data-wow-offset="250">CONTINUE READING</a>
-        </div>
-        <h1>13/01</h1>
-     </div>
-     <div class="blog-box">
-        <div class="blog-img">
-            <img src="img/blog/b3.jpg" alt="" class="wow pulse" data-wow-duration="1s" data-wow-offset="250">
-        </div>
-        <div class="blog-details">
-            <h4 class="wow pulse" data-wow-duration="1s" data-wow-offset="250">The Cotton-Jersey Zip-Up Hoodie</h4>
-            <p class="wow pulse" data-wow-duration="1s" data-wow-offset="250">Kickstarter man braid godard coloring book. Raclette waistcoat selfies
-            yr wolf chartreuse hexagon irony, godard ...</p>
-            <a href="#" class="wow pulse" data-wow-duration="2s" data-wow-offset="250">CONTINUE READING</a>
-        </div>
-        <h1>13/01</h1>
-     </div>
-     <div class="blog-box">
-        <div class="blog-img">
-            <img src="img/blog/b4.jpg" alt="" class="wow pulse" data-wow-duration="1s" data-wow-offset="250">
-        </div>
-        <div class="blog-details">
-            <h4 class="wow pulse" data-wow-duration="1s" data-wow-offset="250">The Cotton-Jersey Zip-Up Hoodie</h4>
-            <p class="wow pulse" data-wow-duration="1s" data-wow-offset="250">Kickstarter man braid godard coloring book. Raclette waistcoat selfies
-            yr wolf chartreuse hexagon irony, godard ...</p>
-            <a href="#" class="wow pulse" data-wow-duration="2s" data-wow-offset="250">CONTINUE READING</a>
-            </div>
-            <h1>13/01</h1>
-            </div>
-     <div class="blog-box">
-        <div class="blog-img">
-            <img src="img/blog/b6.jpg" alt="" class="wow pulse" data-wow-duration="1s" data-wow-offset="250">
-        </div>
-        <div class="blog-details">
-            <h4 class="wow pulse" data-wow-duration="1s" data-wow-offset="250">AW20 Menswear Trends</h4>
-            <p class="wow pulse" data-wow-duration="1s" data-wow-offset="250">Kickstarter man braid godard coloring book. Raclette waistcoat selfies yr wolf chartreuse hexagon irony,godard...</p>
-                <a href="#" class="wow pulse" data-wow-duration="1s" data-wow-offset="250">CONTINUE READING</a>
-        </div>
-        <h1>13/01</h1>
-     </div>
+  <div class="blog-box">
+    <div class="blog-img">
+      <img
+        src="img/blog/b1.jpg"
+        alt=""
+        class="wow pulse"
+        data-wow-duration="1s"
+        data-wow-offset="250"
+      />
+    </div>
+    <div class="blog-details">
+      <h4 class="wow pulse" data-wow-duration="2s" data-wow-offset="250">
+        The Cotton-Jersey Zi[-Up Hoodie
+      </h4>
+      <p class="wow pulse" data-wow-duration="2s" data-wow-offset="250">
+        Kickstarter man braid godard coloring book. Raclette waistcoat selfies
+        yr wolf chartreuse hexagon irony, godard ...
+      </p>
+      <a href="#" class="wow pulse" data-wow-duration="2s" data-wow-offset="250"
+        >CONTINUE READING</a
+      >
+    </div>
+  </div>
+  <div class="blog-box">
+    <div class="blog-img">
+      <img
+        src="img/blog/b2.jpg"
+        alt=""
+        class="wow pulse"
+        data-wow-duration="2s"
+        data-wow-offset="250"
+      />
+    </div>
+    <div class="blog-details">
+      <h4 class="wow pulse" data-wow-duration="1s" data-wow-offset="250">
+        How to Style a Quiff
+      </h4>
+      <p class="wow pulse" data-wow-duration="2s" data-wow-offset="250">
+        Kickstarter man braid godard coloring book. Raclette waistcoat selfies
+        yr wolf chartreuse hexagon irony, godard ...
+      </p>
+      <a href="#" class="wow pulse" data-wow-duration="2s" data-wow-offset="250"
+        >CONTINUE READING</a
+      >
+    </div>
+  </div>
+  <div class="blog-box">
+    <div class="blog-img">
+      <img
+        src="img/blog/b3.jpg"
+        alt=""
+        class="wow pulse"
+        data-wow-duration="1s"
+        data-wow-offset="250"
+      />
+    </div>
+    <div class="blog-details">
+      <h4 class="wow pulse" data-wow-duration="1s" data-wow-offset="250">
+        The Cotton-Jersey Zip-Up Hoodie
+      </h4>
+      <p class="wow pulse" data-wow-duration="1s" data-wow-offset="250">
+        Kickstarter man braid godard coloring book. Raclette waistcoat selfies
+        yr wolf chartreuse hexagon irony, godard ...
+      </p>
+      <a href="#" class="wow pulse" data-wow-duration="2s" data-wow-offset="250"
+        >CONTINUE READING</a
+      >
+    </div>
+  </div>
+  <div class="blog-box">
+    <div class="blog-img">
+      <img
+        src="img/blog/b4.jpg"
+        alt=""
+        class="wow pulse"
+        data-wow-duration="1s"
+        data-wow-offset="250"
+      />
+    </div>
+    <div class="blog-details">
+      <h4 class="wow pulse" data-wow-duration="1s" data-wow-offset="250">
+        The Cotton-Jersey Zip-Up Hoodie
+      </h4>
+      <p class="wow pulse" data-wow-duration="1s" data-wow-offset="250">
+        Kickstarter man braid godard coloring book. Raclette waistcoat selfies
+        yr wolf chartreuse hexagon irony, godard ...
+      </p>
+      <a href="#" class="wow pulse" data-wow-duration="2s" data-wow-offset="250"
+        >CONTINUE READING</a
+      >
+    </div>
+  </div>
+  <div class="blog-box">
+    <div class="blog-img">
+      <img
+        src="img/blog/b6.jpg"
+        alt=""
+        class="wow pulse"
+        data-wow-duration="1s"
+        data-wow-offset="250"
+      />
+    </div>
+    <div class="blog-details">
+      <h4 class="wow pulse" data-wow-duration="1s" data-wow-offset="250">
+        AW20 Menswear Trends
+      </h4>
+      <p class="wow pulse" data-wow-duration="1s" data-wow-offset="250">
+        Kickstarter man braid godard coloring book. Raclette waistcoat selfies
+        yr wolf chartreuse hexagon irony,godard...
+      </p>
+      <a href="#" class="wow pulse" data-wow-duration="1s" data-wow-offset="250"
+        >CONTINUE READING</a
+      >
+    </div>
+  </div>
 </section>
-
-
 
 <!-- Start Section Product 1  -->
 <section id="pagination" class="section-p1 wow bounceIn">
-    <a href="#">1</a>
-    <a href="#">2</a>
-    <a href="#"><i class="fa-solid fa-arrow-right"></i></a>
+  <a href="#">1</a>
+  <a href="#">2</a>
+  <a href="#"><i class="fa-solid fa-arrow-right"></i></a>
 </section>
 
 <app-fotter></app-fotter>
