--- a/src/componants/contact/contact.component.html
+++ b/src/componants/contact/contact.component.html
@@ -1,72 +1,89 @@
 <app-header></app-header>
 <!-- start #id Hero ==> main -->
-  <section id="page-header" class="about-header">
+<section id="page-header" class="about-header">
+  <h2>#Lets Talk</h2>
 
-    <h2>#Lets Talk</h2>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, vitae. </p>
-
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, vitae.
+  </p>
 </section>
-<!-- Start Section Features -->  
-   <section id="contact-details" class="contact-details section-p1"> 
-    <div class="details">
-        <span>GET IN TOUCH</span> 
-        <h2>Visit one of our agency locations or contact us today</h2> 
-        <h3>Head offices</h3> 
-        <div> 
-            <li> 
-                <i class="fa fa-map"></i> 
-                <p>56 Glass ford street Glassgo G1 1UL NEW YORK</p>
-            </li>
-          
-            <li> 
-                <i class="fa-solid fa-phone"></i> 
-                <p>055-22-5431-512</p>
-            </li>
-            <li> 
-              
-                <i class="fa-solid fa-envelope"></i> 
-                <p>cana&#64;exampile.com</p>
-            </li>
-        </div>
+<!-- Start Section Features -->
+<section id="contact-details" class="contact-details section-p1">
+  <div class="details">
+    <span>GET IN TOUCH</span>
+    <h2>Visit one of our agency locations or contact us today</h2>
+    <h3>Head offices</h3>
+    <div>
+      <li>
+        <i class="fa fa-map"></i>
+        <p>56 Glass ford street Glassgo G1 1UL NEW YORK</p>
+      </li>
+
+      <li>
+        <i class="fa-solid fa-phone"></i>
+        <p>055-22-5431-512</p>
+      </li>
+      <li>
+        <i class="fa-solid fa-envelope"></i>
+        <p>cana&#64;exampile.com</p>
+      </li>
     </div>
-    
-    <div class="map"> 
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13674.305276136189!2d31.380458758227547!3d31.03805186029824!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14f79db7a9053547%3A0xf8dab3bbed766c97!2z2KfZhNmF2YbYtdmI2LHYqdiMINin2YTZhdmG2LXZiNix2KkgKNmC2LPZhSAyKdiMINin2YTZhdmG2LXZiNix2KnYjCDZhdit2KfZgdi42Kkg2KfZhNiv2YLZh9mE2YrYqQ!5e0!3m2!1sar!2seg!4v1727905048811!5m2!1sar!2seg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
+
+  <div class="map">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13674.305276136189!2d31.380458758227547!3d31.03805186029824!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14f79db7a9053547%3A0xf8dab3bbed766c97!2z2KfZhNmF2YbYtdmI2LHYqdiMINin2YTZhdmG2LXZiNix2KkgKNmC2LPZhSAyKdiMINin2YTZhdmG2LXZiNix2KnYjCDZhdit2KfZgdi42Kkg2KfZhNiv2YLZh9mE2YrYqQ!5e0!3m2!1sar!2seg!4v1727905048811!5m2!1sar!2seg"
+      width="600"
+      height="450"
+      style="border: 0"
+      allowfullscreen=""
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"
+    ></iframe>
+  </div>
+</section>
+<!-- End Section Features -->
+<section id="form-details">
+  <form action="">
+    <span>Leave A MESSEGE</span>
+    <h2>We love to hear from you</h2>
+    <input type="text" placeholder="Your Name" />
+    <input type="text" placeholder="E-Mail" />
+    <input type="text" placeholder="Subject" />
+    <textarea
+      name=""
+      id=""
+      cols="30"
+      rows="10"
+      placeholder="Your Messege"
+    ></textarea>
+    <button class="normal">Submit</button>
+  </form>
+  <div class="people">
+    <div>
+      <img src="img/people/ahmed.png" />
+      <p>
+        <span>Ahmed Afify</span>Senoir Markting Manager <br />
+        Phone:0123123123123 <br />
+        Email:Joe&#64;Example.com
+      </p>
     </div>
-
-
-
-
-   </section>
-<!-- End Section Features -->  
- <section id="form-details">  
-    <form action=""> 
-        <span>Leave A MESSEGE</span> 
-        <h2>We love to hear from you</h2> 
-        <input type="text" placeholder="Your Name">
-        <input type="text" placeholder="E-Mail">
-        <input type="text" placeholder="Subject"> 
-        <textarea name="" id="" cols="30" rows="10" placeholder="Your Messege"></textarea>
-        <button class="normal">Submit</button>
-    </form> 
-    <div class="people"> 
-        <div> 
-            <img src="img/people/1.png"> 
-            <p><span>joe Doe</span>Senoir Markting Manager <br> Phone:0123123123123
-            <br> Email:Joe&#64;Example.com</p>
-        </div>
-        <div> 
-            <img src="img/people/2.png"> 
-            <p><span>joe Doe</span>Senoir Markting Manager <br> Phone:0123123123123
-            <br> Email:Joe&#64;Example.com</p>
-        </div>
-        <div> 
-            <img src="img/people/3.png"> 
-            <p><span>joe Doe</span>Senoir Markting Manager <br> Phone:0123123123123
-            <br> Email:Joe&#64;Example.com</p>
-        </div>
+    <div>
+      <img src="img/people/eldasas.png" />
+      <p>
+        <span>Ahmed Essam</span>Senoir Markting Manager <br />
+        Phone:0123123123123 <br />
+        Email:Joe&#64;Example.com
+      </p>
     </div>
-
- </section>
- <app-fotter></app-fotter>
+    <div>
+      <img src="img/people/3.png" />
+      <p>
+        <span>joe Doe</span>Senoir Markting Manager <br />
+        Phone:0123123123123 <br />
+        Email:Joe&#64;Example.com
+      </p>
+    </div>
+  </div>
+</section>
+<app-fotter></app-fotter>
