--- a/src/componants/home/home.component.css
+++ b/src/componants/home/home.component.css
@@ -1,14 +1,94 @@
-.anmaition{
-    animation: animate 2s linear infinite;
+.anmaition {
+  animation: animate 2s linear infinite;
 }
 @keyframes animate {
-    0%{
-        transform: translateY(0);
-    }
-    50%{
-        transform: translateY(-5px);
-    }
-    100%{
-        transform: translateY(0);
-    }
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-5px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+:root {
+  --first-color: hsl(176, 88%, 27%);
+  --first-color-alt: hsl(129, 44%, 94%);
+  --text-color: hsl(154, 13%, 32%);
+  --tiny-font-size: 0.6875rem;
+  --border-color: hsl(129, 36%, 85%);
+  --small-font-size: 0.875rem;
+  --h4-font-size: 1.375rem;
+}
+.categories {
+  overflow: hidden;
+}
+.section_category {
+  padding-block: 2rem;
+}
+.font__title {
+  font-size: 1.375rem;
+  margin-bottom: 1.5rem;
+}
+.section__title span {
+  color: hsl(176, 88%, 27%);
+}
+.category__item {
+  text-align: center;
+  border: 1px solid hsl(129, 36%, 85%);
+  padding: 0.625rem 0.625rem 1.25rem;
+  border-radius: 1.25rem;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+.category__item:hover {
+  box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.06);
+}
+.category__img {
+  border-radius: 0.75rem;
+  margin-bottom: 1.25rem;
+}
+.category__title {
+  color: hsl(154, 13%, 32%);
+  font-size: 0.875rem;
+  color: hsl(176, 88%, 27%);
+}
+
+/* swiper class */
+.swiper {
+  overflow: initial;
+  display: flex;
+  position: relative;
+}
+.swiper-button-next::after,
+.swiper-button-prev::after {
+  content: "";
+}
+.swiper-button-next,
+.swiper-button-prev {
+  top: -2.875rem;
+  background-color: hsl(129, 44%, 94%);
+  border: 1px solid hsl(129, 36%, 85%);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  color: hsl(176, 88%, 27%);
+  font-size: 0.6875rem;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+}
+.swiper-button-prev {
+  left: initial;
+  right: 2.5rem;
+}
+.swiper-button-next {
+  right: 0;
 }
