--- a/src/componants/login/login.component.css
+++ b/src/componants/login/login.component.css
@@ -1,4 +1,4 @@
-body{
+/* body{
 	margin: 0;
 	padding: 0;
 	display: flex;
@@ -83,8 +83,76 @@ button:hover{
 	transform: translateY(-500px);
 }
 #chk:checked ~ .login label{
-	transform: scale(1);	
+	transform: scale(1);
 }
 #chk:checked ~ .signup label{
 	transform: scale(.6);
+} */
+
+.btn-login,
+.btn-register {
+  display: inline-block;
+  background-color: hsl(176, 88%, 27%);
+  border: 2px solid hsl(176, 88%, 27%);
+  color: hsl(0, 0%, 100%);
+  padding-inline: 1.75rem;
+  height: 49px;
+  line-height: 49px;
+  border-radius: 0.25rem;
+  font-size: 0.875rem;
+  font-weight: 700;
+  transition: all 0.4s cubic-bezier(0, 0, 0.5, 1);
+}
+
+.grid {
+  display: grid;
+  gap: 1.5rem;
+}
+.login-register__container {
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+}
+.login,
+.register {
+  border: 1px solid hsl(113, 15%, 90%);
+  padding: 2rem;
+  border-radius: 0.5rem;
+}
+input,
+textarea,
+body {
+  color: hsl(154, 13%, 32%);
+  font-size: 1rem;
+  font-weight: 400;
+}
+input,
+textarea,
+button {
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
+.form {
+  display: grid;
+  gap: 15px;
+}
+.form__input {
+  padding: 10px;
+  border: 1px solid hsl(113, 15%, 90%);
+  margin: 5px;
+  border-radius: 5px;
+}
+.btn-login {
+  margin-top: 15px;
+}
+.section--lg {
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  place-items: center;
+}
+@media (max-width: 768px) {
+  .login-register__container {
+    grid-template-columns: 1fr;
+  }
 }
